create polygon
