# server/internal/domain/entity/vertex.go
@@ -1,0 +1,7 @@
+package entity
+
+type Vertex struct {
+	PolygonId string
+	Longitude float64
+	Latitude  float64
+}
