# server/internal/presentation/http/dto/request/polygon.go
@@ -1,0 +1,11 @@
+package request
+
+type Vertex struct {
+	Longitude float64 `json:"longitude"`
+	Latitude  float64 `json:"latitude"`
+}
+
+type CreatePolygon struct {
+	Id       string   `json:"id" binding:"required"`
+	Vertices []Vertex `json:"vertices" binding:"required"`
+}
